--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,15 +1,39 @@
 /* CSS stylesheet  for application */
 
-table {
-    border-collapse: collapse;
-    border: 1px solid silver;
-    padding:15px;
+.button-link {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    /*optional*/
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
-th, td {
-    border: 1px solid silver;
-    padding:15px;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 8rem;
+    background-color: #505050;
+    color: white;
 }
 
+.content-wrap {
+    padding-bottom: 8rem;
+}
 
+body {
+    position: relative;
+    min-height: 100vh;
+}
 
+.img-frontpage {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1
+}
